--- a/src/components/VueContainer/VueContainer.css
+++ b/src/components/VueContainer/VueContainer.css
@@ -1,25 +1,24 @@
 .vue-container {
     width: 95%;
-    padding: 1em;
+    padding: 0 1em 0 1em;
+    gap: 4em;
 
     h2 {
-        margin: 0em 0 1em 0;
-    }
-
-    div {
-        margin: 0 0 1em 0;
-
-        div {
-            margin-left: 2em;
-        }
+        margin-bottom: 1em;
     }
 
     p {
-        margin: 0 0 4em 0;
+        margin-bottom: 2em;
     }
 
     div p::first-letter {
         font-size: 1.2em;
     }
 
+}
+
+@media (width >=810px) {
+    .vue-container p {
+        margin-bottom: 4em;
+    }
 }
