Affinage style vue Engagements

--- a/src/components/VueContainer/VueContainer.css
+++ b/src/components/VueContainer/VueContainer.css
@@ -3,11 +3,13 @@
     padding: 0 1em 0 1em;
     gap: 4em;
 
-    h2 {
+    h2,
+    h3 {
         margin-bottom: 1em;
     }
 
-    p {
+    p,
+    ul {
         margin-bottom: 2em;
     }
 
@@ -15,10 +17,17 @@
         font-size: 1.2em;
     }
 
+
+
 }
 
 @media (width >=810px) {
-    .vue-container p {
-        margin-bottom: 4em;
+
+    .vue-container {
+
+        p,
+        ul {
+            margin-bottom: 4em;
+        }
     }
 }
